Updated html, attempting to link html file to main.cpp

--- a/src/app.html
+++ b/src/app.html
@@ -26,11 +26,6 @@
   body {
     margin: 0;
   }
-  .content {
-    padding: 30px;
-    max-width: 600px;
-    margin: 0 auto;
-  }
   .button {
     padding: 15px 50px;
     font-size: 24px;
@@ -59,18 +54,18 @@
      color:#8c8c8c;
      font-weight: bold;
    }
+   .joystick {
+    margin: none;
+   }
   </style>
 <title>ESP Web Server</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="icon" href="data:,">
 </head>
 <body>
-  <div class="topnav">
-    <h1>Controller</h1>
-  </div>
   <div class="content">
       <p><button id="button" class="button">Toggle</button></p>
-      <canvas id="canvas" name="game"></canvas>
+      <canvas id="canvas" name="game" class="joystick"></canvas>
   </div>
 <script>
   var gateway = `ws://${window.location.hostname}/ws`;
@@ -83,7 +78,6 @@
     websocket = new WebSocket(gateway);
     websocket.onopen    = onOpen;
     websocket.onclose   = onClose;
-    websocket.onmessage = onMessage; // <-- add this line
   }
   function onOpen(event) {
     log('Connection opened');
@@ -105,6 +99,10 @@
     console.log("Websocket message 'toggle' sent");
     websocket.send("toggle");
   }
+
+  //---------------------------------------------------------------
+  //                        JOYSTICK
+  //---------------------------------------------------------------
 </script>
 <script>
   var canvas, ctx;
@@ -124,16 +122,13 @@
       document.addEventListener('touchcancel', stopDrawing);
       document.addEventListener('touchmove', Draw);
       window.addEventListener('resize', resize);
-
-      document.getElementById("x_coordinate").innerText = 0;
-      document.getElementById("y_coordinate").innerText = 0;
-      document.getElementById("speed").innerText = 0;
-      document.getElementById("angle").innerText = 0;
   });
+
   var width, height, radius, x_orig, y_orig;
+
   function resize() {
       width = window.innerWidth;
-      radius = 150;
+      radius = 100;
       height = radius * 6.5;
       ctx.canvas.width = width;
       ctx.canvas.height = height;
@@ -231,16 +226,18 @@
 
           var x_relative = Math.round(x - x_orig);
           var y_relative = Math.round(y - y_orig);
-          
 
-          document.getElementById("x_coordinate").innerText =  x_relative;
-          document.getElementById("y_coordinate").innerText =y_relative ;
-          document.getElementById("speed").innerText = speed;
-          document.getElementById("angle").innerText = angle_in_degrees;
-
-          send( x_relative,y_relative,speed,angle_in_degrees);
+          send( x_relative,y_relative);
       }
   } 
+  
+  function send(x, y) {
+    var data = {"x":x,"y":y};
+    data = JSON.stringify(data);
+    console.log(typeof(data));
+    console.log(data);
+    websocket.send(data);
+  }
 </script>
 </body>
 </html>
