logging joystick, values, zoom disabled "not working on chrome"

--- a/src/app.html
+++ b/src/app.html
@@ -25,6 +25,11 @@
   }
   body {
     margin: 0;
+    touch-action: none;
+    webkit-touch-action: none;
+    moz-touch-action: none;
+    ms-touch-action: none;
+    o-touch-action: none;
   }
   .button {
     padding: 15px 50px;
